# tracking_drone

./: Cargo.toml  README.md  memory.x  memroy.x
.cargo/: config.toml
src/: detector.rs  main.rs  wheel.rs
